# rediscoro

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONNECTION_LIFETIME_FIX.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.sh
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  README.md
benchmark/cases/boostredis/: redis_latency.cpp  redis_pipeline_depth.cpp  redis_throughput.cpp
benchmark/cases/rediscoro/: redis_latency.cpp  redis_pipeline_depth.cpp  redis_throughput.cpp
benchmark/conf/: redis_latency.conf  redis_pipeline_depth.conf  redis_throughput.conf
benchmark/schemas/: redis_latency.schema.json  redis_pipeline_depth.schema.json  redis_throughput.schema.json
benchmark/scripts/: run_perf_benchmarks.sh  run_perf_ratio_suite.sh  validate_benchmark_report.py
benchmark/scripts/suites/: run_perf_redis_latency.sh  run_perf_redis_pipeline_depth.sh  run_perf_redis_throughput.sh
cmake/: rediscoroConfig.cmake.in
docs/: REVIEW_CHECKLIST.md  architecture.md  review-improvements.md  review-round2-improvements.md
examples/: CMakeLists.txt  adapter_containers.cpp  dynamic_response.cpp  ping.cpp  pipeline_mixed_results.cpp  request_timeout.cpp  static_response.cpp  tracing_hooks.cpp
include/rediscoro/: assert.hpp  client.hpp  config.hpp  connection.hpp  error.hpp  error_info.hpp  expected.hpp  ignore.hpp  impl.hpp  logger.hpp  reconnection_policy.hpp  redis.hpp  rediscoro.hpp  request.hpp  response.hpp  response_builder.hpp  src.hpp  tracing.hpp
include/rediscoro/adapter/: adapt.hpp  adapter_error.hpp  any_adapter.hpp  error.hpp  ignore.hpp  result.hpp  traits.hpp
include/rediscoro/adapter/detail/: adapt_array.hpp  adapt_ignore.hpp  adapt_map.hpp  adapt_optional.hpp  adapt_scalar.hpp  adapt_sequence.hpp  convert.hpp  impl.hpp  response_traits.hpp  result_traits.hpp  traits.hpp  wrapper.hpp
include/rediscoro/adapter/impl/: error.ipp
include/rediscoro/detail/: assert.hpp  cancel_source.hpp  connection.hpp  connection_executor.hpp  connection_impl.hpp  connection_state.hpp  executor_guard.hpp  internal_header_access.hpp  notify_event.hpp  pending_response.hpp  pipeline.hpp  response_builder.hpp  response_sink.hpp  ring_queue.hpp  stop_scope.hpp
include/rediscoro/detail/impl/: connection.ipp  executor_guard.ipp  notify_event.ipp  pending_response.ipp  pipeline.ipp
include/rediscoro/impl/: assert.ipp  client.ipp  connection.ipp  connection_impl.ipp  error.ipp  notify_event.ipp  pipeline.ipp  request.ipp
include/rediscoro/impl/connection/: actor_loops.ipp  connect.ipp  core.ipp  enqueue.ipp  io.ipp  reconnect.ipp
include/rediscoro/resp3/: adapter.hpp  buffer.hpp  builder.hpp  encoder.hpp  error.hpp  generator.hpp  kind.hpp  message.hpp  node.hpp  parser.hpp  raw.hpp  resp3.hpp  serializer.hpp  type.hpp  value.hpp  visitor.hpp
include/rediscoro/resp3/detail/: buffer.hpp
include/rediscoro/resp3/impl/: buffer.ipp  error.ipp  parser.ipp  serializer.ipp  type.ipp
include/redisus/: buffer.hpp  error.hpp  expected.hpp  ignore.hpp  response.hpp  src.hpp
include/redisus/adapter/: README.md  adapt.hpp  adapter.hpp  adapters.hpp  any_adapter.hpp  ignore.hpp  result.hpp
include/redisus/adapter/detail/: convert.hpp  impl.hpp  response_traits.hpp  result_traits.hpp  wrapper.hpp
include/redisus/impl/: buffer.ipp  error.ipp
include/redisus/resp3/: generator.hpp  node.hpp  parser.hpp  serializer.hpp  type.hpp
include/redisus/resp3/impl/: parser.ipp  serializer.ipp  type.ipp
include/xz/: redis.hpp
include/xz/redis/: assert.hpp  buffer.hpp  config.hpp  connection.hpp  connection_fsm.hpp  error.hpp  expected.hpp  ignore.hpp  logger.hpp  request.hpp  response.hpp  src.hpp
include/xz/redis/adapter/: any_adapter.hpp  ignore.hpp  result.hpp
include/xz/redis/adapter/detail/: convert.hpp  impl.hpp  response_traits.hpp  result_traits.hpp  wrapper.hpp
include/xz/redis/detail/: assert.hpp  connection.hpp  connection_fsm.hpp  connection_impl.hpp  pipeline.hpp
include/xz/redis/impl/: buffer.ipp  connection.ipp  connection_impl.ipp  error.ipp  pipeline.ipp  request.ipp
include/xz/redis/resp3/: buffer.hpp  generator.hpp  node.hpp  parser.hpp  serializer.hpp  type.hpp
include/xz/redis/resp3/detail/: buffer.hpp  generator.hpp
include/xz/redis/resp3/impl/: buffer.ipp  parser.ipp  serializer.ipp  type.ipp
scripts/: build.sh  run_clang_tidy.sh  run_coverage.sh
test/: CMakeLists.txt  adapter_test.cpp  async_test_util.hpp  client_lifecycle_test.cpp  client_test.cpp  client_trace_test.cpp  connection_fsm_test.cpp  connection_test.cpp  expected_test.cpp  logger_test.cpp  notify_event_test.cpp  parser_test.cpp  partial_feeding_test.cpp  pipeline_test.cpp  redis_integration_test.cpp  rediscoro.cpp  redisus.cpp  request_test.cpp  resp3_adapter_test.cpp  resp3_buffer_test.cpp  resp3_encoder_test.cpp  resp3_parser_test.cpp  resp3_types_test.cpp  resp3_visitor_test.cpp  response_test.cpp  ring_queue_test.cpp  simple_connection_test.cpp  test_resp3_encoder.cpp  test_resp3_types.cpp  test_resp3_visitor.cpp  test_util.hpp
test/support/: fake_redis_server.hpp
